@@ -8,6 +8,8 @@
 	  the object's smallest 2d dimension plus 1 from the object.
 	* pathfinder/path.cc: Improved path tracing slightly by having it also print
 	  z coordinates.
+	* paths.cc: Fixed a few incorrect results for grabbing objects through walls
+	  re-introduced in commit #7224.
 
 2012-12-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* usecode/*: Fixed longstanding bug in usecode symbol table. Also fixed bug
